[package]
version = "0.1.0"
name = "thorn"
authors = ["lunand"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"
rayon = "1.5.3"
rustyline = "9.1.2"

# TODO: Move crates below to the wynn crate
ariadne = "0.1.5"
combine = "4.6.4"

wynn = { path = "./wynn" }

[workspace]
members = [
    "wynn"
]

[[bench]]
name = "db_benchmark"
harness = false
