[package]
version = "0.1.0"
name = "hoya_db"
authors = ["lunand"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"
rayon = "1.5.3"
rustyline = "9.1.2"
hoya = { path = "./libs/hoya" }
db = { path = "./libs/db" }

[workspace]
members = ["libs/*"]

[[bench]]
name = "db_benchmark"
harness = false
