[package]
version = "1.2.0-dev"
name = "hoya_db"
authors = ["lunand"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"
rayon = "1.5.3"
rustyline = "10.0.0"
hoya = { path = "./libs/hoya" }
db = { path = "./libs/db" }

[workspace]
members = ["libs/*"]

[[bench]]
name = "db_benchmark"
harness = false
